--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="home_profile">Profile</string>
     <string name="not_implemented">This feature is not yet implemented</string>
     <string name="come_back_later">Come back later</string>
+    <string name="operation_pending">It\'s pending operation</string>
+    <string name="new_debt_pending">New debt hasnt yet been proven by debter</string>
+    <string name="new_debt_complete">This debt has been proven by debtor</string>
+    <string name="new_debt_failure">Unfortunately debtor hasn\'t proved that this debt corresponds to him</string>
+    <string name="paid_debt_pending">Waiting untill lender proves debt has been paid</string>
+    <string name="paid_debt_complete">Lender has proven he\'s got money</string>
+    <string name="paid_debt_failure">Lender has refused this debt was paid</string>
 </resources>
