Added new debt screen, floating action button for it. Fixed prototype sise.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="payments">Payments</string>
     <string name="overdue_payment">Payment is overdue! Expected on %date</string>
     <string name="next_payment">Next payment is expected on %date</string>
+    <string name="new_debt">Add new debt</string>
 </resources>
