--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -25,4 +25,5 @@
     <string name="payments">Платежи</string>
     <string name="overdue_payment">Платёж просрочен, ожидался %date</string>
     <string name="next_payment">Следующий платёж ожидается %date</string>
+    <string name="new_debt">Добавить новый долг</string>
 </resources>
