--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="new_debt">Add new debt</string>
     <string name="pending_debts">Pending debts</string>
     <string name="msg_token_fmt">Token: %s</string>
+    <string name="lender_placeholder">Lender</string>
+    <string name="confirm">Confirm</string>
+    <string name="debt_requested">Request sent</string>
 </resources>
